adding bookfinder app

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                                     Clique aqui para mais detalhes do projeto
                                     <i class="fas fa-info-circle"></i>
                                 </a>
-                                <br />
+                                <br>
                                 <a
                                     target="_blank"
                                     href="https://easy-hospital.netlify.app"
@@ -637,8 +637,101 @@
                         </div>
                     </div>
 
-                    <!-- StockTrader -->
+                    <!-- BookFinder -->
                     <div
+                        class="d-flex flex-column flex-md-row justify-content-between mb-5"
+                    >
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">
+                                Book Finder · Aplicação web para encontrar/comprar livros
+                                <i class="fas fa-book"></i>
+                            </h3>
+                            <div class="subheading mb-3">
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://pt-br.reactjs.org/"
+                                >
+                                    React.js
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://reactrouter.com/"
+                                >
+                                    React Router
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://styled-components.com/"
+                                >
+                                    Styled Components
+                                </a> 
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://sweetalert.js.org/"
+                                >
+                                    Sweet Alert
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://github.com/axios/axios"
+                                >
+                                    Axios
+                                </a>
+
+                                +
+
+                                <a href="https://developers.google.com/books" target="_blank" rel="noopener noreferrer" class="text-secondary">
+                                    Google Books API
+                                </a>
+                            </div>
+                            <p>
+                                Com o objetivo de praticar e melhorar meus conhecimentos no framework React(que comecei a aprender recentemente, em Setembro) me propus o desafio de desenvolver
+                                essa aplicação, nela, o usuário pode procurar por livros(e comprá-los caso deseje) utilizando a API REST do Google Books. 
+                                Durante o desenvolvimento dessa app
+                                aprendi muito sobre a estrutura/organização de
+                                aplicações front-end utilizando o framework React
+                                <br />
+                                <a
+                                    target="_blank"
+                                    href="https://react-book-finder.netlify.app"
+                                >
+                                    Clique aqui para ver o projeto rodando
+                                    <i class="fas fa-play-circle"></i>
+                                </a>
+                                <br>
+                                <a
+                                    target="_blank"
+                                    href="https://github.com/TiagoDiass/book-finder"
+                                >
+                                    Clique aqui para mais detalhes do projeto
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Outubro de 2020</span>
+                        </div>
+                    </div>
+
+                    <!-- StockTrader -->
+                    <!-- <div
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
                     >
                         <div class="flex-grow-1">
@@ -746,7 +839,7 @@
                         <div class="flex-shrink-0">
                             <span class="text-primary">Julho de 2020</span>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Restful API -->
                     <!-- <div
@@ -861,7 +954,7 @@
                             </p>
                         </div>
                         <div class="flex-shrink-0">
-                            <span class="text-primary">Junho de 2020</span>
+                            <span class="text-primary">Outubro de 2020</span>
                         </div>
                     </div>
                 </div>
