alterando descrição principal

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                         estou aprendendo React). Minha paixão por tecnologia
                         começou quando eu era criança, sempre fui muito
                         interessado por computadores e afins, logo, no final do
-                        meu ensino médio(no final de 2018, tenho 18 anos
+                        meu ensino médio(no final de 2018, tenho 19 anos
                         atualmente) decidi que estudaria Tecnologia da
                         Informação, e a partir disso conheci o mundo da
-                        programação. No começo deste ano comecei a estudar
-                        desenvolvimento web e venho me apaixonando por isso cada
-                        dia mais. Sou movido pelo desejo de criar soluções que
+                        programação. No começo de 2020 comecei a estudar
+                        desenvolvimento web e hoje posso afirmar com certeza, eu amo o que faço. 
+                        Sou movido pelo desejo de criar soluções que
                         possam transformar a vida das pessoas!
                     </p>
                     <div class="social-icons">
@@ -188,7 +188,28 @@
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
                     >
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Desenvolvedor Front-end</h3>
+                            <h3 class="mb-0">Desenvolvedor Fullstack Júnior</h3>
+                            <div class="subheading mb-3">
+                                NSC Negócios + Tecnologia
+                            </div>
+                            <p>
+                                Foco em soluções de problemas tanto na área de front-end quanto back-end, 
+                                desenvolvimento de interfaces e estilizações sempre pensando na melhor 
+                                experiência para o usuário no front-end e também desenvolvimento de lógicas seguindo as regras
+                                de negócio no back-end. Tecnologias utilizadas: Javascript, Vue.js, Node.js.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary"
+                                >Dezembro de 2020 - Atual</span
+                            >
+                        </div>
+                    </div>
+                    <div
+                        class="d-flex flex-column flex-md-row justify-content-between mb-5"
+                    >
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Desenvolvedor Front-end Júnior</h3>
                             <div class="subheading mb-3">
                                 NSC Negócios + Tecnologia
                             </div>
@@ -202,7 +223,7 @@
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary"
-                                >Agosto de 2020 - Atual</span
+                                >Agosto de 2020 - Novembro de 2020</span
                             >
                         </div>
                     </div>
@@ -968,8 +989,7 @@
                     <h2 class="mb-2">Interesses</h2>
                     <p>
                         Além de desenvolvimento web, também gosto muito de jogos
-                        on-line e filmes de ficção científica(meu favorito é o
-                        filme Interestelar).
+                        on-line e filmes de ficção científica.
                     </p>
                     <p class="mb-0">
                         Também gosto muito do idioma inglês, por isso, tenho
