alterações em alguns textos

--- a/index.html
+++ b/index.html
@@ -132,15 +132,10 @@
                     </div>
                     <p class="lead mb-5">
                         Olá, sou um Desenvolvedor Fullstack atualmente
-                        trabalhando com a stack Vue.js e Node.js(e atualmente
-                        estou aprendendo React). Minha paixão por tecnologia
-                        começou quando eu era criança, sempre fui muito
-                        interessado por computadores e afins, logo, no final do
-                        meu ensino médio(no final de 2018, tenho 19 anos
-                        atualmente) decidi que estudaria Tecnologia da
-                        Informação, e a partir disso conheci o mundo da
-                        programação. No começo de 2020 comecei a estudar
-                        desenvolvimento web e hoje posso afirmar com certeza, eu amo o que faço. 
+                        trabalhando com a stack Vue.js e Node.js. 
+                        Apaixonando por tecnologia desde pequeno.
+                        No começo de 2020 comecei a estudar
+                        desenvolvimento web e hoje posso afirmar com certeza, eu amo trabalhar com isso. 
                         Sou movido pelo desejo de criar soluções que
                         possam transformar a vida das pessoas!
                     </p>
@@ -196,7 +191,7 @@
                                 Foco em soluções de problemas tanto na área de front-end quanto back-end, 
                                 desenvolvimento de interfaces e estilizações sempre pensando na melhor 
                                 experiência para o usuário no front-end e também desenvolvimento de lógicas seguindo as regras
-                                de negócio no back-end. Tecnologias utilizadas: Javascript, Vue.js, Node.js.
+                                de negócio no back-end. Atuação principal em um <a href="https://qrsorteios.com.br" target="_blank">produto para automação de campanhas promocionais de sorteios</a>. Tecnologias utilizadas: Javascript, Vue.js, Node.js.
                             </p>
                         </div>
                         <div class="flex-shrink-0">
@@ -273,9 +268,8 @@
                                 conclusão: 12/2021
                             </div>
                             <p>
-                                Curso da área de Tecnologia da Informação com
-                                foco em análise, desenvolvimento e engenharia de
-                                software
+                                Curso da área de T.I. com foco em análise, 
+                                desenvolvimento e engenharia de software
                             </p>
                         </div>
                     </div>
@@ -292,46 +286,8 @@
                         Linguagens de Programação & Ferramentas
                     </div>
                     <ul class="list-inline dev-icons">
-                        <li
-                            class="list-inline-item"
-                            class="list-inline-item"
-                            data-toggle="tooltip"
-                            data-placement="top"
-                            title="HTML 5"
-                        >
-                            <i class="fab fa-html5"></i>
-                        </li>
 
-                        <li
-                            class="list-inline-item"
-                            class="list-inline-item"
-                            data-toggle="tooltip"
-                            data-placement="top"
-                            title="CSS 3"
-                        >
-                            <i class="fab fa-css3-alt"></i>
-                        </li>
-
-                        <li
-                            class="list-inline-item"
-                            class="list-inline-item"
-                            data-toggle="tooltip"
-                            data-placement="top"
-                            title="Bootstrap 4"
-                        >
-                            <i class="fab fa-bootstrap"></i>
-                        </li>
-
-                        <li
-                            class="list-inline-item"
-                            class="list-inline-item"
-                            data-toggle="tooltip"
-                            data-placement="top"
-                            title="Sass"
-                        >
-                            <i class="fab fa-sass"></i>
-                        </li>
-
+                        <!-- Javascript -->
                         <li
                             class="list-inline-item"
                             class="list-inline-item"
@@ -342,6 +298,17 @@
                             <i class="fab fa-js-square"></i>
                         </li>
 
+                        <!-- React -->
+                        <li
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="React"
+                        >
+                            <i class="fab fa-react"></i>
+                        </li>
+
+                        <!-- Vue.js -->
                         <li
                             class="list-inline-item"
                             class="list-inline-item"
@@ -352,6 +319,7 @@
                             <i class="fab fa-vuejs"></i>
                         </li>
 
+                        <!-- Node.js -->
                         <li
                             class="list-inline-item"
                             class="list-inline-item"
@@ -361,17 +329,42 @@
                         >
                             <i class="fab fa-node-js"></i>
                         </li>
-
+                        
+                        <!-- HTML5 -->
                         <li
+                            class="list-inline-item"
                             class="list-inline-item"
                             data-toggle="tooltip"
                             data-placement="top"
-                            title="React"
+                            title="HTML 5"
                         >
-                            <i class="fab fa-react"></i>
+                            <i class="fab fa-html5"></i>
                         </li>
 
+                        <!-- CSS 3 -->
                         <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="CSS 3"
+                        >
+                            <i class="fab fa-css3-alt"></i>
+                        </li>
+
+                        <!-- Sass -->
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="Sass"
+                        >
+                            <i class="fab fa-sass"></i>
+                        </li>               
+
+                        <!-- NPM -->
+                        <!-- <li
                             class="list-inline-item"
                             class="list-inline-item"
                             data-toggle="tooltip"
@@ -379,9 +372,10 @@
                             title="NPM"
                         >
                             <i class="fab fa-npm"></i>
-                        </li>
+                        </li> -->
 
-                        <li
+                        <!-- YARN -->
+                        <!-- <li
                             class="list-inline-item"
                             class="list-inline-item"
                             data-toggle="tooltip"
@@ -389,8 +383,9 @@
                             title="Yarn"
                         >
                             <i class="fab fa-yarn"></i>
-                        </li>
+                        </li> -->
 
+                        <!-- GIT -->
                         <li
                             class="list-inline-item"
                             class="list-inline-item"
@@ -994,9 +989,8 @@
                     <p class="mb-0">
                         Também gosto muito do idioma inglês, por isso, tenho
                         muito interesse em conhecer outros países como Canadá e
-                        Austrália(principalmente a Austrália por ter uma cultura
-                        muito bacana e clima parecido com o do nosso Brasil) e
-                        quem sabe no futuro até morar e trabalhar em algum
+                        Austrália e quem sabe no futuro até morar
+                        e trabalhar em algum
                         desses países.
                     </p>
                 </div>
