mudando link do cv e trocando ordem das skills

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         </a>
                         <a
                             target="_blank"
-                            href="https://drive.google.com/file/d/1wpd1i2y_6Y4AtexlXQtgX2f4NpZcUpPp/view?usp=sharing"
+                            href="https://drive.google.com/file/d/1X5DbEp8Kyvbv-UHLUiz5A_a2ORLPCRi0/view"
                             class="download-cv-button"
                         >
                             <i class="fas fa-file-download"></i>
@@ -298,16 +298,6 @@
                             <i class="fab fa-js-square"></i>
                         </li>
 
-                        <!-- React -->
-                        <li
-                            class="list-inline-item"
-                            data-toggle="tooltip"
-                            data-placement="top"
-                            title="React"
-                        >
-                            <i class="fab fa-react"></i>
-                        </li>
-
                         <!-- Vue.js -->
                         <li
                             class="list-inline-item"
@@ -317,6 +307,16 @@
                             title="Vue.js"
                         >
                             <i class="fab fa-vuejs"></i>
+                        </li>
+
+                        <!-- React -->
+                        <li
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="React"
+                        >
+                            <i class="fab fa-react"></i>
                         </li>
 
                         <!-- Node.js -->
