alterando alguns textos na parte de xp e projetos

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                             <p>
                                 Foco em soluções de problemas tanto na área de front-end quanto back-end, 
                                 desenvolvimento de interfaces e estilizações sempre pensando na melhor 
-                                experiência para o usuário no front-end e também desenvolvimento de lógicas seguindo as regras
-                                de negócio no back-end. Atuação principal em um <a href="https://qrsorteios.com.br" target="_blank">produto para automação de campanhas promocionais de sorteios</a>. Tecnologias utilizadas: Javascript, Vue.js, Node.js.
+                                experiência para o usuário no front-end e também desenvolvimento do back-end (uma API RESTful) seguindo as regras do negócio.
+                                Atuação principal em um <a href="https://qrsorteios.com.br" target="_blank">produto para automação de campanhas promocionais de sorteios</a>. Tecnologias utilizadas: Javascript, Vue.js, Node.js.
                             </p>
                         </div>
                         <div class="flex-shrink-0">
@@ -577,16 +577,6 @@
                                 <a
                                     class="text-secondary"
                                     target="_blank"
-                                    href="https://sweetalert.js.org/"
-                                >
-                                    Sweet Alert
-                                </a>
-
-                                +
-
-                                <a
-                                    class="text-secondary"
-                                    target="_blank"
                                     href="https://github.com/axios/axios"
                                 >
                                     Axios
@@ -690,16 +680,6 @@
                                 >
                                     Styled Components
                                 </a> 
-
-                                +
-
-                                <a
-                                    class="text-secondary"
-                                    target="_blank"
-                                    href="https://sweetalert.js.org/"
-                                >
-                                    Sweet Alert
-                                </a>
 
                                 +
 
