adicionando meta tags

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Currículo  - Tiago da Costa Dias - Desenvolvedor Fullstack" />
+        <meta name="author" content="Tiago da Costa Dias" />
+        <meta name="keywords" content="Tiago Dias, Tiago da Costa Dias, Desenvolvedor Fullstack, Programador Fullstack, Desenvolvedor Fullstack com foco em Front-end">
         <title>Currículo · Tiago Dias</title>
 
         <!-- Font Awesome icons (free version)-->
