adicionado trecho que fala de testes automatizados e alguns brs na primeira xp tbm

--- a/index.html
+++ b/index.html
@@ -189,10 +189,11 @@
                                 NSC Negócios + Tecnologia
                             </div>
                             <p>
-                                Foco em soluções de problemas tanto na área de front-end quanto back-end, 
-                                desenvolvimento de interfaces e estilizações sempre pensando na melhor 
-                                experiência para o usuário no front-end e também desenvolvimento do back-end (uma API RESTful) seguindo as regras do negócio.
-                                Atuação principal em um <a href="https://qrsorteios.com.br" target="_blank">produto para automação de campanhas promocionais de sorteios</a>. Tecnologias utilizadas: Javascript, Vue.js, Node.js.
+                                Foco em soluções de problemas tanto na área de front-end quanto back-end <br> 
+                                Desenvolvimento de interfaces e estilizações sempre pensando na melhor experiência para o usuário no front-end. <br>
+                                Desenvolvimento do back-end (uma API RESTful) seguindo regras do negócio, realizando testes automatizados para garantir qualidade de código e também que tudo funciona como esperado. <br>
+                                Atuação principal em um <a href="https://qrsorteios.com.br" target="_blank">produto para automação de campanhas promocionais de sorteios</a>. <br>
+                                Tecnologias utilizadas: Javascript, Vue.js, Node.js.
                             </p>
                         </div>
                         <div class="flex-shrink-0">
