alterado link do cv e também corrigido texto na bio

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <p class="lead mb-5">
                         Olá, sou um Desenvolvedor Fullstack atualmente
                         trabalhando com a stack Vue.js e Node.js. 
-                        Apaixonando por tecnologia desde pequeno.
+                        Apaixonado por tecnologia desde pequeno.
                         No começo de 2020 comecei a estudar
                         desenvolvimento web e hoje posso afirmar com certeza, eu amo trabalhar com isso. 
                         Sou movido pelo desejo de criar soluções que
@@ -164,7 +164,7 @@
                         </a>
                         <a
                             target="_blank"
-                            href="https://drive.google.com/file/d/1X5DbEp8Kyvbv-UHLUiz5A_a2ORLPCRi0/view"
+                            href="https://drive.google.com/file/d/10JCkB5xME8cruE48FnkGHCaJKLunS-zt/view"
                             class="download-cv-button"
                         >
                             <i class="fas fa-file-download"></i>
