--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">
-                        Linguagens de Programação & Ferramentas
+                        Tecnologias
                     </div>
                     <ul class="list-inline dev-icons">
 
