feat: add react state management tools

--- a/index.html
+++ b/index.html
@@ -432,7 +432,13 @@
                             <span class="fa-li"
                                 ><i class="fas fa-check"></i
                             ></span>
-                            React
+                            React | Next.js
+                        </li>
+                        <li>
+                            <span class="fa-li"
+                                ><i class="fas fa-check"></i
+                            ></span>
+                            React Context API | Mobx | Redux
                         </li>
                         <li>
                             <span class="fa-li"
